src/app/views/home/banner/banner.scss
@use 'mixins' as *;

:host {
  display: flex;
  width: 100vw;
  min-height: min(100vh, 108rem);
  justify-content: center;
  overflow: hidden;
  position: relative;
}

section {
  display: flex;
  width: 100vw;
  min-height: inherit;
  align-items: flex-end;
  padding-top: 12.5rem;
  z-index: 0;

  .background-layer {
    position: absolute;
    inset: 0;
    z-index: 0;
    width: 100vw;
    height: 100%;
    object-fit: cover;
    pointer-events: none;
    will-change: transform;
  }

  .welder-layer {
    position: absolute;
    right: 0;
    bottom: -95px;
    z-index: 1;
    width: 94vw;
    max-width: 100vw;
    height: auto;
    pointer-events: none;
    will-change: transform;
    transform-origin: right bottom;

    @include custom-breakpoint(1024) {
      opacity: 0.85;
    }

    @include custom-breakpoint(700) {
      opacity: 0.55;
    }
  }

  .banner-content {
    position: relative;
    z-index: 3;
    display: flex;
    max-width: 70.5rem;
    flex-direction: column;
    padding: 0 0 6.519%;
    gap: 3.7rem;

    p {
      margin-bottom: 3.3rem;

      @include custom-breakpoint(600) {
        margin-bottom: 0;
      }
    }

    .call-to-action {
      display: flex;
      flex-wrap: wrap;
      gap: 2rem 3.9rem;

      @include custom-breakpoint(450) {
        app-button {
          display: flex;
          flex-grow: 1;
        }
      }
    }
  }

  .gradient-overlay {
    position: absolute;
    inset: 0;
    z-index: 2;
    left: 0;
    width: 100vw;
    height: 100%;
    object-fit: cover;
    pointer-events: none;
    will-change: transform;
  }
}

